--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@
 *.iws
 .idea/
 
-.env*
+.env
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
