--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   flutter_dotenv: ^3.1.0
   cupertino_icons: ^1.0.0
+  bloc: ^6.1.1
   flutter_bloc: ^6.1.1
   equatable: ^1.2.5
   http: ^0.12.2
